--- a/src/components/Global/MainTemplate/main-template.module.css
+++ b/src/components/Global/MainTemplate/main-template.module.css
@@ -4,7 +4,7 @@
   background-repeat: no-repeat;
   margin: 0  auto 0 auto;
   display: block;
-  text-align: left;
+  text-align: center;
 }
 .OnlyMobile {display: none;}
 
